# hershey-fonts

./: AUTHORS  CMakeLists.txt  COPYING  README.md  hershey-fonts.notes
debian/: changelog  control  copyright  hershey-font-gnuplot.install  hershey-fonts-data.install  libhersheyfont-dev.install  rules  watch
hershey-fonts/: astrology.jhf  cursive.jhf  cyrilc_1.jhf  cyrillic.jhf  futural.jhf  futuram.jhf  gothgrt.jhf  gothiceng.jhf  gothicger.jhf  gothicita.jhf  gothitt.jhf  greek.jhf  greekc.jhf  greeks.jhf  japanese.jhf  markers.jhf  mathlow.jhf  mathupp.jhf  meteorology.jhf  music.jhf  rowmand.jhf  rowmans.jhf  rowmant.jhf  scriptc.jhf  scripts.jhf  symbolic.jhf  timesg.jhf  timesi.jhf  timesib.jhf  timesr.jhf  timesrb.jhf
libhersheyfont/: CMakeLists.txt  hershey-font-example.c  hersheyfont.c  hersheyfont.h  libhersheyfont.3
tools/: CMakeLists.txt  generate-sample-sheets  hershey-font-check.c  hershey-font-gnuplot.1  hershey-font-gnuplot.c  hershey-jhf-fix-linebreaks.py
